MDEV-11737 Failing assertion: block->magic_n == MEM_BLOCK_MAGIC_N

Issue was that the m_prebuilt array was reused without resetting a counter,
which caused a memory overrun.

Adjusted test case to 79 characters